fix(gradle): address Astra packaging review findings